[package]
name = "logistics"
version = "0.1.0"
edition = "2021"

[lib]
name = "logistics"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "mixer", "ttf"]
